force-app/main/default/objects/Help_Support__c/Help_Support__c.object-meta.xml
<CustomObject>
    <label>Help &amp; Support</label>
    <nameField>
        <displayFormat>HS-{0000}</displayFormat>
        <label>Help &amp; Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help &amp; Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>