force-app/main/default/objects/Help_Support__c/fields/Help_Text_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_Guideline__c</fullName>
    <label>Help Text &amp; Guideline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>