force-app/main/default/objects/Help_Support__c/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <label>Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>